--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rate-limiter-sliding",
-  "version": "1.0.0",
-  "description": "Limit requests by key",
+  "version": "1.0.2",
+  "description": "A generic rate limiter that can be used to limit requests, or anything just by using key, can protect from brute-force and DDoS attacks",
   "main": "index.js",
   "scripts": {
     "test_dev": "npx nodemon ./src/tests/index.ts",
@@ -17,8 +17,17 @@
     "type": "git",
     "url": "git+https://github.com/Mo-Foula/rate-limiter-sliding.git"
   },
+  "homepage": "https://github.com/Mo-Foula/rate-limiter-sliding#readme",
   "devDependencies": {
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
-  }
+  },
+   "keywords": [
+    "rate",
+    "limiting",
+    "limiter",
+    "sliding window",
+    "sliding",
+    "requests"
+  ]
 }
